examples/test/testpolicy7570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7570
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key17: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
          key22: value4
      podSelector:
        matchLabels:
          key9: value25
          key29: value7
          key13: value44
